refactor: rename task type to task name
