# doc/swagger/swagger.yml
@@ -42,10 +42,16 @@ definitions:
         x-go-name: StartedAt
       status:
         $ref: '#/definitions/JobStatus'
-      task_type:
-        description: TaskType is the type of the task to be executed.
+      task_name:
+        description: TaskName is the name of the task to be executed.
         type: string
-        x-go-name: TaskType
+        x-go-name: TaskName
+      timeout:
+        description: Timeout is the time in seconds after which the job task will
+          be interrupted.
+        format: int64
+        type: integer
+        x-go-name: Timeout
     title: Job represents an async task.
     type: object
     x-go-package: valet/internal/core/domain
@@ -79,9 +85,13 @@ definitions:
       name:
         type: string
         x-go-name: Name
-      task_type:
+      task_name:
         type: string
-        x-go-name: TaskType
+        x-go-name: TaskName
+      timeout:
+        format: int64
+        type: integer
+        x-go-name: Timeout
     title: RequestBodyDTO is the data transfer object used for a job creation or update.
     type: object
     x-go-package: valet/internal/handler/jobhdl
