# internal/handler/jobhdl/http.go
@@ -26,7 +26,7 @@ func (hdl *JobHTTPHandler) Create(c *gin.Context) {
 	body := NewRequestBodyDTO()
 	c.BindJSON(&body)
 
-	j, err := hdl.jobService.Create(body.Name, body.TaskType, body.Description, body.Timeout, body.Metadata)
+	j, err := hdl.jobService.Create(body.Name, body.TaskName, body.Description, body.Timeout, body.Metadata)
 	if err != nil {
 		switch err.(type) {
 		case *apperrors.ResourceValidationErr:
